# PHDays-Badge

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.defaults  version.txt
components/dns_server/: dns_server.c
components/dns_server/include/: dns_server.h
main/: CMakeLists.txt  Kconfig.projbuild  adc_utils.c  adc_utils.h  bluetooth.c  bluetooth.h  buttons.c  buttons.h  buzzer.c  buzzer.h  idf_component.yml  led_plate.c  led_plate.h  led_plate.inc  main.c  nvs_utils.c  nvs_utils.h  ota.c  ota.h  rest_server.c  rest_server.h  wifi_utilss.c  wifi_utilss.h
main/ui/: index.html
