idf_component_register(SRCS "led_plate.c" "buzzer.c" "buttons.c" "rest_server.c" "main.c" "wifi_utilss.c" "ota.c" "buzzer.c" "nvs_utils.c" "adc_utils.c"
                    INCLUDE_DIRS "ui"
                    EMBED_FILES "ui/1.js.gz"  "ui/apple-touch-icon.png" "ui/epilepsy-sans.eot.gz" "ui/epilepsy-sans.svg.gz" "ui/epilepsy-sans.ttf.gz" "ui/epilepsy-sans.woff" "ui/epilepsy-sans.woff2" "ui/favicon.ico" "ui/index.html" "ui/main.css.gz" "ui/main.js.gz" "ui/webfont-icons.svg.gz" )
